# protocol-framework

./: README.md
protocol-base/: Cargo.toml
protocol-base/examples/: basic_usage.rs
protocol-base/src/: lib.rs
protocol-base/src/definitions/: defi.rs
protocol-base/src/error/: comm_error.rs  hex_digest_error.rs  hex_error.rs  mod.rs
protocol-digester/: Cargo.toml
protocol-digester/src/: aes_digester.rs  des_digester.rs  hmac_sha256_digester.rs  lib.rs  md5_digester.rs  sha256_digester.rs
protocol-kernel/: Cargo.toml
protocol-kernel/src/: lib.rs
protocol-kernel/src/bridge/: mod.rs
protocol-kernel/src/core/: cache.rs  macro_plugin.rs  mod.rs  reader.rs  type_converter.rs  writer.rs
protocol-kernel/src/core/parts/: decoding_filter.rs  mod.rs  placeholder.rs  raw_capsule.rs  raw_chamber.rs  rawfield.rs  traits.rs  transport_carrier.rs  transport_pair.rs
protocol-kernel/src/utils/: crc_util.rs  hex_util.rs  math_util.rs  mod.rs  timestamp_util.rs
