[package]
name = "protocol-digester"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol-base = { path = "../protocol-base" }
hex = "0.4.3"
aes = "0.8.4"
des = "0.8.1"
rand = "0.9.2"
md5 = "0.8.0"
sha2 = "0.10.8"
cipher = { version = "0.4.4", features = ["block-padding"] }
hmac = "0.12.1"
base64 = "0.22.0"

[lib]
crate-type = ["rlib"]
