[package]
name = "protocol-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol-base = { path = "../protocol-base" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dyn-clone = "1.0.20"
moka = { version = "0.12.11", features = ["sync"] }
once_cell = "1.21.3"
pinyin = "0.10.0"
rand = "0.9.2"
rust_decimal = "1.39.0"
rust_decimal_macros = "1.39.0"
hex = "0.4.3"
chrono = "0.4.42"

[lib]
crate-type = ["rlib"]
